--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "index.js",
   "repository": "https://github.com/RodrigoOler/jot-examples.git",
   "author": "Rodrigo Oler <roodrigoprogrammer@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "johnny-five": "^0.10.6"
+  }
 }
